--- a/EmployeeCsv/.settings/org.eclipse.wst.common.component
+++ b/EmployeeCsv/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EmployeeCsv">
+    <wb-module deploy-name="EmployeeCsv12">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="EmployeeCsv"/>
-        <property name="java-output-path" value="/EmployeeCsv/target/classes"/>
+        <property name="java-output-path" value="/EmployeeCsv12/target/classes"/>
+        <property name="context-root" value="EmployeeCsv12"/>
     </wb-module>
 </project-modules>
